# inference

./: Dockerfile  Makefile  docker-compose.dev.yaml  pyproject.toml
.github/workflows/: deploy.yaml
app/: main.py  schema.py
app/core/: settings.py  state.py
app/models/tagger/: __init__.py  slang.json
app/routes/: pos_tagger.py
app/utils/: get_state.py
